# clawbot

./: .gitignore  README.md  pyproject.toml
clawbot/: agent.py  browser.py  cli.py  desktop.py  tools.py
clawbot/llm/: dartmouth.py
